see #11924 - add `--add-modules java.se.ee` for unit tests so that `PluginHandlerTestIT.testValidityOfAvailablePlugins` can access JAXB - there is no similar option in manifest (at least not yet)
git-svn-id: http://josm.openstreetmap.de/svn/trunk@12237 0c6e7542-c601-0410-84e7-c038aed88b3b